Revert "feat: Testes ItemServiceTest e TarefaServiceTest atualizados"
This reverts commit 9d7f23df03d963f8d54352a5a17d363e7e574216.