@@ -10,7 +10,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TarefaService implements com.challenge.supera.ManagementTask.service.interfaces.TarefaService {
@@ -38,7 +37,7 @@ public class TarefaService implements com.challenge.supera.ManagementTask.servic
         List<Tarefa> tarefas = repository.findAll();
         return tarefas.stream()
                 .map(adapter::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
